# dictconfig-interceptor

./: README.md  pyproject.toml
dictconfig_interceptor/: __init__.py
test/: test_callback.py
